--- a/Application/WebContent/profile-page.html
+++ b/Application/WebContent/profile-page.html
@@ -52,7 +52,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="../assets/img/blurred-image-1.jpg">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Back to Kit</a>
+                        <a class="nav-link" href="login-page.html">Back to Kit</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://github.com/creativetimofficial/now-ui-kit/issues">Have an issue?</a>
